# geolux-agentic-signature-compromise-drift

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  METHODOLOGY.md  Makefile  README.md  RESEARCH.md  pyproject.toml
adapters/: claude_adapter.py  claude_adapter_compat.py  embedding_adapter.py  interfaces.py  litellm_adapter.py  metric_extractor.py  mock_adapter.py
api/: app.py  dependencies.py
db/: database.py  models.py  repository.py
demo/: .gitignore  index.html  package-lock.json  package.json
docs/: one-pager.md
domain/: attacks.py  canaries.py  conversation.py  embedding_models.py  enums.py  geometry.py  identity.py  lifecycle.py  metrics.py  models.py  passport.py  probes.py  reducibility.py  security.py  semantics.py  temporal.py
engine/: attack_simulator.py  authentication.py  baseline_engine.py  behavior_profile.py  canary_system.py  certification.py  compromise_detector.py  drift_detector.py  embedding_evaluation.py  embedding_signature.py  enforcement.py  identity_pipeline.py  monitor.py  multi_turn_prober.py  persistent_orchestrator.py  perturbation_engine.py  probe_generator.py  provenance.py  recovery_engine.py  reducibility_analyzer.py  run_orchestrator.py  secret_beacon.py  secure_measurement.py  semantic_analyzer.py  signature_generator.py  temporal_tracker.py  verification.py
rubrics/: attack_simulator.yaml  authenticity.yaml  canary_system.yaml  dynamic_probes.yaml  execution.yaml  foundation.yaml  integrity_reset.yaml  measurement.yaml  measurement_security.yaml  multi_turn_probes.yaml  recovery.yaml  semantic_analysis.yaml  (+1 more)
(+117 files in other folders)
