[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["domain*", "engine*", "adapters*", "db*", "scenarios*", "api*"]

[project]
name = "geolux-agentic-signature"
version = "0.1.0"
description = "Geometric agent identity verification via behavioral signatures and computational reducibility"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "umap-learn>=0.5",
    "sqlalchemy>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "requests>=2.28",
    "eval_type_backport>=0.2.0;python_version<'3.10'",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
inference = [
    "anthropic>=0.30,<=0.40;python_version<'3.10'",
    "anthropic>=0.30;python_version>='3.10'",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "hypothesis>=6.82",
    "behave>=1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring real Claude API calls (ANTHROPIC_API_KEY)",
    "slow: tests that take >10s to run",
    "regression: CI guards for headline metric pipelines (pre-registered bounds)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
